# anthropic-api-types

./: .gitignore  justfile  package-lock.json  package.json
.github/workflows/: publish-rust.yml  publish-ts.yml  sync.yml
rust/: Cargo.toml
rust/src/: types.rs
scripts/: delete-tag-if-exists.js  extract-schemas.ts  filter-spec.ts  get-crate-version.js  get-npm-version.js  git-check-sync.js  increment-version.js  merge-rust.ts  sync.ts
scripts/add-utoipa-annotations/: Cargo.toml
scripts/add-utoipa-annotations/src/: main.rs
typescript/: openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/openapi-typescript/: openapi-schema.ts
typescript/src/types/: types.gen.ts
