[package]
name = "anthropic-api"
version = "0.1.0"
edition = "2021"
description = "Rust type definitions for the Anthropic API (messages, models endpoints)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
